MDEV-13275:Query optimizer not picking optimal ORDER BY PRIMARY in case of INNER JOIN            on PRIMARY like it does for similar WHERE condition

Currently the code for the optimization orderby_uses_equalities takes into account full substitution so this
blocks cases where we have [VAR]char with insensitive comparisions('A'='a') and padding('A'='A ')
The solutuion would be to allow substitution for the purpose of comparison for order by
because order by only needs the sorting columns for comparision.